--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/index.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
     <!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
@@ -22,13 +22,18 @@
         <section class="CTA">
             <div class="cta-txt">
                 <h1>
-
+                    BookR
                 </h1>
                 <h2>
-
+                    Your source for all things TextBook
                 </h2>
             </div>
+            <button class="signUp">
+                Sign Up!
+            </button>
         </section>
+
+
     </div>
 
 
