--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 <body>
     <div class="site-wrapper">
         <header>
+            <div class="logo">
+                <img src="imgs/BOOKR LOGO.png" alt="" class="">
+            </div>
             <nav>
-
+                <a href="about.html">About</a>
+                <a href="#">Sign In</a>
             </nav>
         </header>
 
@@ -33,7 +37,12 @@
             </button>
         </section>
 
-
+        <footer>
+            <nav>
+                
+            </nav>
+            <p>Copywrite 2019</p>
+        </footer>
     </div>
 
 
