--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <![endif]-->
 </head>
 <body>
-    <div class="site-wrapper">
+
+    <div class="site-wrapper">         
         <header>
             <div class="logo">
                 <img src="imgs/BOOKR LOGO.png" alt="" class="">
@@ -47,8 +48,12 @@
                 <a href="#" class="fa fa-youtube"></a>
                 <a href="#" class="fa fa-instagram"></a> 
             </nav>
-            <p>Copywrite 2019</p>
+            <p>Copyright 2019</p>
         </footer>
+        <video autoplay muted loop id="bgVideo">
+                <source src="video/Video Inside A Library (1).mp4" type="video/mp4">
+                Your browser does not support HTML5 video.
+        </video>  
     </div>
 
 
