--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
     <div class="site-wrapper">         
         <header>
             <div class="logo">
-                <img src="imgs/BOOKR LOGO.png" alt="" class="">
+                <img src="imgs/BOOKR LOGO.png" alt="company logo">
             </div>
             <nav>
                 <a href="about.html">About</a>
                 <a href="#">Sign In</a>
             </nav>
         </header>
-
         <section class="CTA">
             <div class="cta-txt">
                 <h1>
@@ -33,15 +32,16 @@
                 <h3>
                     Your source for all things textbook
                 </h3>
-
+                <button class="signUp">
+                    Sign Up!
+                </button>
             </div>
-            <button class="signUp">
-                Sign Up!
-            </button>
-        </section>
 
-        <footer>
-                
+            <!-- <div class="bglogo">
+                <img src="imgs/LogoVector.png" alt="company logo" >
+            </div> -->
+        </section>
+        <footer>   
             <nav>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="#" class="fa fa-twitter"></a>
@@ -50,11 +50,14 @@
             </nav>
             <p>Copyright 2019</p>
         </footer>
+        <!-- <div class="videoWrapper">
+
+        </div>
         <video autoplay muted loop id="bgVideo">
                 <source src="video/Video Inside A Library (1).mp4" type="video/mp4">
                 Your browser does not support HTML5 video.
         </video>  
-    </div>
+    </div> -->
 
 
 </body>
