fixed nav for static

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <![endif]-->
 </head>
 <body>
-
-    <div class="site-wrapper">         
-        <header>
+    <header>
+        <div class="navbar">
             <div class="logo">
                 <img src="imgs/BOOKR LOGO.png" alt="company logo">
             </div>
@@ -23,7 +22,9 @@
                 <a href="about.html">About</a>
                 <a href="#">Sign In</a>
             </nav>
-        </header>
+        </div>
+    </header>
+    <div class="site-wrapper">         
         <section class="CTA">
             <div class="cta-txt">
                 <h1>
@@ -41,7 +42,16 @@
                 <img src="imgs/LogoVector.png" alt="company logo" >
             </div> -->
         </section>
-        <footer>   
+
+        <!-- <div class="videoWrapper">
+
+        </div>
+        <video autoplay muted loop id="bgVideo">
+                <source src="video/Video Inside A Library (1).mp4" type="video/mp4">
+                Your browser does not support HTML5 video.
+        </video>   -->
+    </div>
+    <footer>   
             <nav>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="#" class="fa fa-twitter"></a>
@@ -50,15 +60,6 @@
             </nav>
             <p>Copyright 2019</p>
         </footer>
-        <!-- <div class="videoWrapper">
-
-        </div>
-        <video autoplay muted loop id="bgVideo">
-                <source src="video/Video Inside A Library (1).mp4" type="video/mp4">
-                Your browser does not support HTML5 video.
-        </video>  
-    </div> -->
-
 
 </body>
 </html>
