fixing cta postion

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="navbar">
             <div class="logo">
-                <img src="imgs/BOOKR LOGO.png" alt="company logo">
+                <a href="index.html"><img src="imgs/BOOKR LOGO.png" alt="company logo"></a>
             </div>
             <nav>
                 <a href="about.html">About</a>
