--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <a href="index.html"><img src="imgs/BOOKR LOGO.png" alt="company logo"></a>
             </div>
             <nav>
-                <a href="about.html">About</a>
-                <a href="#">Sign In</a>
+                <a href="about.html">ABOUT</a>
+                <a href="#" id="signIn">SIGN IN</a>
             </nav>
         </div>
     </header>
@@ -42,14 +42,14 @@
                 <img src="imgs/LogoVector.png" alt="company logo" >
             </div> -->
         </section>
-
-        <!-- <div class="videoWrapper">
-
-        </div>
-        <video autoplay muted loop id="bgVideo">
-                <source src="video/Video Inside A Library (1).mp4" type="video/mp4">
-                Your browser does not support HTML5 video.
-        </video>   -->
+<!-- 
+        <div class="videoWrapper">
+                <video autoplay muted loop id="bgVideo">
+                        <source src="video/Video Inside A Library (1).mp4" type="video/mp4">
+                        Your browser does not support HTML5 video.
+                </video>  
+        </div> -->
+        
     </div>
     <footer>   
             <nav>
