--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                 <img src="imgs/LogoVector.png" alt="company logo" >
             </div> -->
         </section>
-<!-- 
+
         <div class="videoWrapper">
                 <video autoplay muted loop id="bgVideo">
                         <source src="video/Video Inside A Library (1).mp4" type="video/mp4">
                         Your browser does not support HTML5 video.
                 </video>  
-        </div> -->
+        </div>
         
     </div>
     <footer>   
