--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="videoWrapper">
                 <video autoplay muted loop id="bgVideo">
-                        <source src="video/Video Inside A Library (1).mp4" type="video/mp4">
+                        <source src="video/Library_up.mp4" type="video/mp4">
                         Your browser does not support HTML5 video.
                 </video>  
         </div>
