--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
                 <img src="imgs/LogoVector.png" alt="company logo" >
             </div> -->
         </section>
+        <div class="bw">
 
+    
         <div class="videoWrapper">
                 <video autoplay muted loop id="bgVideo">
-                        <source src="video/Library_up.mp4" type="video/mp4">
+                        <source src="video/Library.mp4" type="video/mp4">
                         Your browser does not support HTML5 video.
                 </video>  
         </div>
-        
+    </div>
     </div>
     <footer>   
             <nav>
