--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     BOOKR:
                 </h1>
                 <h2>
-                    Stroll through your library.
+                    Let us walk you <br >
+                    through our library.
                 </h2>
                 <button class="signUp">
                     Sign Up!
