working from feedback moved text

--- a/index.html
+++ b/index.html
@@ -24,18 +24,17 @@
             </nav>
         </div><!--Nav Bar-->
     </header>
-    <div class="background">
+    <div class="backgroundLanding">
         <div class="site-wrapper">         
             <section class="CTA">
                 <div class="cta-txt">
                     <h1>
                         BOOKR
                     </h1>
-                    <h2>
+                    <h3>
                         Let us walk you <br >
                         through our library.
-                    </h2>
-                    
+                    </h3>
                 </div><!--CTA Text-->
                 <button class="signUp">
                         SIGN UP!
@@ -48,7 +47,7 @@
                     </video>  
             </div><!--Video Wrapper-->
         </div><!--Site Wrapper-->
-    </div>
+    </div><!--background landing Wrapper-->
     
     <footer>   
         <nav>
