--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </section> <!--CTA-->
             <div class="videoWrapper">
                     <video autoplay muted loop id="bgVideo">
-                        <source src="video/buildbw.mp4" type="video/mp4">
+                        <source src="video/Untitled Project 1.mov" type="video/mp4">
                         Your browser does not support HTML5 video.
                     </video>  
             </div><!--Video Wrapper-->
