phone mode is finished

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <button class="signUp">
                             SIGN UP!
                     </button>
-                </div>
+                </div><!--Button Container-->
             </section> <!--CTA-->
             <div class="videoWrapper">
                     <video autoplay muted loop id="bgVideo">
