qroking on tablet

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h1>BOOKR</h1>
                     <h3>
                         Let us walk you <br >
-                        through our library.
+                        through our library
                     </h3>
                 </div><!--CTA Text-->
                 <div class="btn">
