filling in about.html

--- a/about.html
+++ b/about.html
@@ -27,13 +27,35 @@
 <div class="about-wrapper">
     <section class="top-content">
         <div class="topimg">
-            
+            <img src="imgs/topimg.jpg" alt="book shelf">
         </div>
         <div class="toptxt">
             <h1>Who are We?</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta assumenda, fugit veniam doloremque magnam cum consequuntur aut ipsum amet dolores eius veritatis impedit maxime temporibus id quisquam consequatur ratione? Doloribus.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta assumenda, fugit veniam doloremque magnam cum consequuntur aut ipsum amet dolores eius veritatis impedit maxime temporibus id quisquam consequatur ratione? DoloribusLorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta assumenda, fugit veniam .</p>
         </div><!--Top text-->
+        <div class="signupbtn">
+            <button>SIGN UP!</button>
+        </div>
     </section><!--Top Content-->
+    <section class="middle-content">
+        <div class="products">
+            <h3>Products</h3>
+            <!-- <img src="imgs/book.jpg" alt=""> -->
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem pariatur asperiores id delectus laboriosam inventore beatae placeat, debitis quia facilis sit, illum quos numquam iusto.</p>
+        </div>
+        <div class="reviews">
+            <h3>Review</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam, unde! Consectetur velit vel aliquid eum iste veritatis nesciunt, ea, doloremque, culpa aspernatur dignissimos sequi earum dolores magni accusamus ratione rerum.</p>
+        </div>
+        <div class="purchase">
+            <h3>Purchase</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos officiis deserunt amet praesentium dolores debitis et nobis. Quia, sunt quos ab ipsa nostrum nulla placeat dolores laudantium. Accusamus, molestias explicabo?</p>
+        </div>
+    </section>
+    <section class="team">
+        <h2>The team behind the scenes</h2>
+        <p>Bookr was a collbrative project built by Lambda School students during the build week of July 2019.</p>
+    </section>
 </div><!--About Wrapper-->
 <footer>   
     <nav>
