filling in team names  about.html

--- a/about.html
+++ b/about.html
@@ -53,8 +53,70 @@
         </div>
     </section>
     <section class="team">
-        <h2>The team behind the scenes</h2>
-        <p>Bookr was a collbrative project built by Lambda School students during the build week of July 2019.</p>
+        <div class="teamtext">
+            <h2>The team behind the scenes</h2>
+            <p>Bookr was a collbrative project built by Lambda School students during the build week of July 2019.</p>
+        </div>
+        <div class="daniel">
+            <h4>Daniel Jones</h4>
+            <p>Web UI</p>
+            <p>Web Development Lambda School</p>
+        </div>
+        <div class="suffyan">
+            <h4>Suffyan Tariq</h4>
+            <p>Web UI</p>
+            <p>Web Development Lambda School</p>
+        </div>
+        <div class="leslee">
+            <h4>Leslee Wood</h4>
+            <p>UX Designer</p>
+            <p>UX Designer Lambda School</p>
+        </div>  
+        <div class="taylor">
+            <h4>Taylor Fahey-Lyles</h4>
+            <p>iOS Developer</p>
+            <p>iOS Development Lambda School</p>
+        </div> 
+        <div class="taylor">
+            <h4>Taylor Fahey-Lyles</h4>
+            <p>iOS Developer</p>
+            <p>iOS Development Lambda School</p>
+        </div>      
+        <div class="andrew">
+            <h4>Andrew Ruiz</h4>
+            <p>iOS Developer</p>
+            <p>iOS Development Lambda School</p>
+        </div>  
+        <div class="jeffery">
+            <h4>Jeffery Santana</h4>
+            <p>iOS Developer</p>
+            <p>iOS Development Lambda School</p>
+        </div>
+        <div class="jon">
+            <h4>Jonathan Scott</h4>
+            <p>Front End I</p>
+            <p>Web Development Lambda School</p>
+        </div>     
+        <div class="leana">
+            <h4>Leana Neparidze</h4>
+            <p>Front End II</p>
+            <p>Web Development Lambda School</p>
+        </div>
+        <div class="areum">
+            <h4>Areum Jo</h4>
+            <p>Front End III</p>
+            <p>Web Development Lambda School</p>
+        </div>    
+        <div class="blake">
+            <h4>Blake Goms</h4>
+            <p>Front End Arch</p>
+            <p>Web Development Lambda School</p>
+        </div>    
+        <div class="nabeelah">
+            <h4>Nabeelah Yousuph</h4>
+            <p>Web Backend</p>
+            <p>Web Development Lambda School</p>
+        </div>                   
     </section>
 </div><!--About Wrapper-->
 <footer>   
