fixed launch page mobile background

--- a/about.html
+++ b/about.html
@@ -31,15 +31,18 @@
         </div>
         <div class="toptxt">
             <h1>Who are We?</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta assumenda, fugit veniam doloremque magnam cum consequuntur aut ipsum amet dolores eius veritatis impedit maxime temporibus id quisquam consequatur ratione? DoloribusLorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta assumenda, fugit veniam .</p>
+            <p>Bookr is your source for all things Textbook. 
+            Picture the AirBNB of textbooks, a social platform for peer-reviewed textbooks.As a user I can log in and see a list of textbooks. Each book will have a 5 star rating I can browse from. 
+            As a user I can review each book.
+            </p>
         </div><!--Top text-->
         <div class="signupbtn">
             <button>SIGN UP!</button>
         </div>
     </section><!--Top Content-->
     <section class="middle-content">
-        <div class="products">
-            <h3>Products</h3>
+        <div class="service">
+            <h3>Service</h3>
             <!-- <img src="imgs/book.jpg" alt=""> -->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem pariatur asperiores id delectus laboriosam inventore beatae placeat, debitis quia facilis sit, illum quos numquam iusto.</p>
         </div>
