added team photos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div><!--Logo-->
             <nav>
                 <a href="about.html">ABOUT</a>
-                <a href="#" id="signIn">SIGN IN</a>
+                <a href="https://bookrlambda.netlify.com/" id="signIn">SIGN IN</a>
             </nav>
         </div><!--Nav Bar-->
     </header>
