fixed button link to the app

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
             </p>
         </div><!--Top text-->
         <div class="signupbtn">
-            <button>SIGN UP!</button>
+            <button class="aboutbtn"><a href="https://bookrlambda.netlify.com/">SIGN UP!</a></button>
         </div>
     </section><!--Top Content-->
     <section class="middle-content">
@@ -73,6 +73,7 @@
             <h4>Suffyan Tariq</h4>
             <p>Web UI</p>
             <p>Web Development Lambda School</p>
+
         </div>
         <div class="teamcards">
             <img src="/imgs/Leslee.jpeg" alt="Leslee">
@@ -86,11 +87,6 @@
             <p>Specialty: iOS Developer</p>
             <p>iOS Development Lambda School</p>
         </div>      
-        <!-- <div class="teamcards">
-            <h4>Andrew Ruiz</h4>
-            <p>Specialty: iOS Developer</p>
-            <p>iOS Development Lambda School</p>
-        </div>   -->
         <div class="teamcards">
             <img src="/imgs/jeff.jpeg" alt="jeff profile">
             <h4>Jeffery Santana</h4>
