--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                     </h3>
                 </div><!--CTA Text-->
                 <div class="btn">
-                    <button class="signUp">
-                            SIGN UP!
+                    <button class="signUp"><a href="https://bookrlambda.netlify.com/">SIGN UP!</a>
                     </button>
                 </div><!--Button Container-->
             </section> <!--CTA-->
