--- a/about.html
+++ b/about.html
@@ -66,62 +66,71 @@
             <img src="/imgs/daniel.jpeg" alt="daniel">
             <h4>Daniel Jones</h4>
             <p>Web UI</p>
-            <p>Web Development Lambda School</p>
+            <p>Web Development Lambda School</p>            
+            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
         </div>
         <div class="teamcards">
             <img src="/imgs/suffyan.jpeg" alt="Suffyan">
             <h4>Suffyan Tariq</h4>
             <p>Web UI</p>
             <p>Web Development Lambda School</p>
-
+            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
         </div>
         <div class="teamcards">
             <img src="/imgs/Leslee.jpeg" alt="Leslee">
             <h4>Leslee Wood</h4>
             <p>UX Designer</p>
             <p>UX Designer Lambda School</p>
+            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
         </div>  
         <div class="teamcards">
             <img src="/imgs/taylor.jpeg" alt="taylor profile">
             <h4>Taylor Fahey-Lyles</h4>
             <p>Specialty: iOS Developer</p>
             <p>iOS Development Lambda School</p>
+            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></buttoN>
         </div>      
         <div class="teamcards">
             <img src="/imgs/jeff.jpeg" alt="jeff profile">
             <h4>Jeffery Santana</h4>
             <p>Specialty: iOS Developer Engineer</p>
             <p>iOS Development Lambda School</p>
+            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
         </div>
         <div class="teamcards">
             <img src="/imgs/jon.jpeg" alt="jon profile">
             <h4>Jonathan Scott</h4>
             <p>Front End I</p>
             <p>Web Development Lambda School</p>
+            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
         </div>     
         <div class="teamcards">
             <img src="/imgs/leana.jpeg" alt="Leana">
             <h4>Leana Neparidze</h4>
             <p>Front End II</p>
             <p>Web Development Lambda School</p>
+            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
         </div>
         <div class="teamcards">
             <img src="/imgs/Areum.jpeg" alt="Areum">
             <h4>Areum Jo</h4>
             <p>Front End III</p>
             <p>Web Development Lambda School</p>
+            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
         </div>    
         <div class="teamcards">
             <img src="/imgs/blake.jpeg" alt="blake">
             <h4>Blake Goms</h4>
             <p>Front End Arch</p>
             <p>Web Development Lambda School</p>
+            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
         </div>    
         <div class="teamcards">
             <img src="/imgs/nabeelah.jpeg" alt="Nabeelah">
             <h4>Nabeelah Yousuph</h4>
             <p>Web Backend</p>
             <p>Web Development Lambda School</p>
+            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
         </div>
     </div>                   
     </section>
