finsihed styling bio cards

--- a/about.html
+++ b/about.html
@@ -86,14 +86,14 @@
         <div class="teamcards">
             <img src="/imgs/taylor.jpeg" alt="taylor profile">
             <h4>Taylor Fahey-Lyles</h4>
-            <p>Specialty: iOS Developer</p>
+            <p>iOS Developer</p>
             <p>iOS Development Lambda School</p>
             <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></buttoN>
         </div>      
         <div class="teamcards">
             <img src="/imgs/jeff.jpeg" alt="jeff profile">
             <h4>Jeffery Santana</h4>
-            <p>Specialty: iOS Developer Engineer</p>
+            <p>iOS Developer Engineer</p>
             <p>iOS Development Lambda School</p>
             <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
         </div>
