added final images

--- a/about.html
+++ b/about.html
@@ -42,16 +42,18 @@
         </div>
     </section><!--Top Content-->
     <section class="middle-content">
-        <div class="service">
+        <div class="middle-box">
+            <img src="imgs/service.jpg" alt="desk with school supplies">
             <h3>Service</h3>
-            <!-- <img src="imgs/book.jpg" alt=""> -->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem pariatur asperiores id delectus laboriosam inventore beatae placeat, debitis quia facilis sit, illum quos numquam iusto.</p>
         </div>
-        <div class="service">
+        <div class="middle-box">
+            <img src="imgs/review.jpg" alt="open book">
             <h3>Review</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam, unde! Consectetur velit vel aliquid eum iste veritatis nesciunt, ea, doloremque, culpa aspernatur dignissimos sequi earum dolores magni accusamus ratione rerum.</p>
         </div>
-        <div class="service">
+        <div class="middle-box">
+            <img src="/imgs/purchase.jpg" alt="money">
             <h3>Purchase</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos officiis deserunt amet praesentium dolores debitis et nobis. Quia, sunt quos ab ipsa nostrum nulla placeat dolores laudantium. Accusamus, molestias explicabo?</p>
         </div>
