--- a/about.html
+++ b/about.html
@@ -70,70 +70,70 @@
             <h4>Daniel Jones</h4>
             <p>Web UI</p>
             <p>Web Development Lambda School</p>            
-            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
+            <button class="gitbtn"><a href="https://github.com/djones36">GITHUB</a></button>
         </div>
         <div class="teamcards">
             <img src="/imgs/suffyan.jpeg" alt="Suffyan">
             <h4>Suffyan Tariq</h4>
             <p>Web UI</p>
             <p>Web Development Lambda School</p>
-            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
+            <button class="gitbtn"><a href="https://github.com/Suffyan-T">GITHUB</a></button>
         </div>
         <div class="teamcards">
             <img src="/imgs/Leslee.jpeg" alt="Leslee">
             <h4>Leslee Wood</h4>
             <p>UX Designer</p>
             <p>UX Designer Lambda School</p>
-            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
+            <button class="gitbtn"><a href="https://github.com/LVWood">GITHUB</a></button>
         </div>  
         <div class="teamcards">
             <img src="/imgs/taylor.jpeg" alt="taylor profile">
             <h4>Taylor Fahey-Lyles</h4>
             <p>iOS Developer</p>
             <p>iOS Development Lambda School</p>
-            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></buttoN>
+            <button class="gitbtn"><a href="https://github.com/OaklandHawk">GITHUB</a></buttoN>
         </div>      
         <div class="teamcards">
             <img src="/imgs/jeff.jpeg" alt="jeff profile">
             <h4>Jeffery Santana</h4>
             <p>iOS Developer Engineer</p>
             <p>iOS Development Lambda School</p>
-            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
+            <button class="gitbtn"><a href="https://github.com/Santana-Says">GITHUB</a></button>
         </div>
         <div class="teamcards">
             <img src="/imgs/jon.jpeg" alt="jon profile">
             <h4>Jonathan Scott</h4>
             <p>Front End I</p>
             <p>Web Development Lambda School</p>
-            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
+            <button class="gitbtn"><a href="https://github.com/jondscott21">GITHUB</a></button>
         </div>     
         <div class="teamcards">
             <img src="/imgs/leana.jpeg" alt="Leana">
             <h4>Leana Neparidze</h4>
             <p>Front End II</p>
             <p>Web Development Lambda School</p>
-            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
+            <button class="gitbtn"><a href="https://github.com/leananepari">GITHUB</a></button>
         </div>
         <div class="teamcards">
             <img src="/imgs/Areum.jpeg" alt="Areum">
             <h4>Areum Jo</h4>
             <p>Front End III</p>
             <p>Web Development Lambda School</p>
-            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
+            <button class="gitbtn"><a href="https://github.com/areumjo">GITHUB</a></button>
         </div>    
         <div class="teamcards">
             <img src="/imgs/blake.jpeg" alt="blake">
             <h4>Blake Goms</h4>
             <p>Front End Arch</p>
             <p>Web Development Lambda School</p>
-            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
+            <button class="gitbtn"><a href="https://github.com/orgs/bookr-buildweek/people/Blake-Goms">GITHUB</a></button>
         </div>    
         <div class="teamcards">
             <img src="/imgs/nabeelah.jpeg" alt="Nabeelah">
             <h4>Nabeelah Yousuph</h4>
             <p>Web Backend</p>
             <p>Web Development Lambda School</p>
-            <button class="gitbtn"><a href="https://bookrlambda.netlify.com/">GITHUB</a></button>
+            <button class="gitbtn"><a href="https://github.com/NabeelahY">GITHUB</a></button>
         </div>
     </div>                   
     </section>
