finetune some of the code layout so it looks pretty

--- a/about.html
+++ b/about.html
@@ -14,138 +14,138 @@
 </head>
 <body>
     <div class="about-body">
-    <header>
-        <div class="navbar">
-            <div class="logo">
-                <a href="index.html"><img src="imgs/BOOKR LOGO.png" alt="company logo"></a>
-            </div><!--Logo-->
-            <nav>
-                <a href="about.html">ABOUT</a>
-                <a href="https://bookrlambda.netlify.com/" id="signIn">SIGN IN</a>
-            </nav>
-        </div><!--Nav Bar-->
-    </header>
-<div class="about-wrapper">
-    <section class="top-content">
-        <div class="topimg">
-            <img src="imgs/topimg.jpg" alt="book shelf">
-        </div>
-        <div class="toptxt">
-            <h1>Who are We?</h1>
-            <p>Bookr is your source for all things Textbook. 
-            Picture the AirBNB of textbooks, a social platform for peer-reviewed textbooks.As a user I can log in and see a list of textbooks. Each book will have a 5 star rating I can browse from. 
-            As a user I can review each book.
-            </p>
-        </div><!--Top text-->
-        <div class="signupbtn">
-            <button class="aboutbtn"><a href="https://bookrlambda.netlify.com/">SIGN UP!</a></button>
-        </div>
-    </section><!--Top Content-->
-    <section class="middle-content">
-        <div class="middle-box">
-            <img src="imgs/service.jpg" alt="desk with school supplies">
-            <h3>Service</h3>
-            <p>Teachers surveyed reported that they would be more likely to try a textbook if it was recommended by a peer. BOOKR is a platform for teachers to share both positive and negative feedback on their teaching materials. Guiding them to the correct purchase for their class.
-            </p>
-        </div>
-        <div class="middle-box">
-            <img src="imgs/review.jpg" alt="open book">
-            <h3>Review</h3>
-            <p>Users have the power to review any textbook in our database. Teachers can leave detail realworld experience reviews, based on a wide range of criteria. We also make use of a simple 5 star rating for when you need to quickly sort based on the highest ratings.</p>
-        </div>
-        <div class="middle-box">
-            <img src="/imgs/social.jpg" alt="money">
-            <h3>Social</h3>
-            <p>Bookr is more then a review app, it's a soical media platform for those who have an interest in providing the very best textbooks for the youth of the world. With user feedback and interaction together we can prevent poorly crafted or inefficient books from being purchase by your school.  </p>
-        </div>
-    </section>
-    <section class="team">
-        <div class="teamtext">
-            <h2>The team behind the scenes</h2>
-            <p>Bookr was a collbrative project built by Lambda School students during the build week of July 2019.</p>
-        </div>
-        <div class="bios">
-        <div class="teamcards">
-            <img src="/imgs/daniel.jpeg" alt="daniel">
-            <h4>Daniel Jones</h4>
-            <p>Web UI</p>
-            <p>Web Development Lambda School</p>            
-            <button class="gitbtn"><a href="https://github.com/djones36">GITHUB</a></button>
-        </div>
-        <div class="teamcards">
-            <img src="/imgs/suffyan.jpeg" alt="Suffyan">
-            <h4>Suffyan Tariq</h4>
-            <p>Web UI</p>
-            <p>Web Development Lambda School</p>
-            <button class="gitbtn"><a href="https://github.com/Suffyan-T">GITHUB</a></button>
-        </div>
-        <div class="teamcards">
-            <img src="/imgs/Leslee.jpeg" alt="Leslee">
-            <h4>Leslee Wood</h4>
-            <p>UX Designer</p>
-            <p>UX Designer Lambda School</p>
-            <button class="gitbtn"><a href="https://github.com/LVWood">GITHUB</a></button>
-        </div>  
-        <div class="teamcards">
-            <img src="/imgs/taylor.jpeg" alt="taylor profile">
-            <h4>Taylor Fahey-Lyles</h4>
-            <p>iOS Developer</p>
-            <p>iOS Development Lambda School</p>
-            <button class="gitbtn"><a href="https://github.com/OaklandHawk">GITHUB</a></buttoN>
-        </div>      
-        <div class="teamcards">
-            <img src="/imgs/jeff.jpeg" alt="jeff profile">
-            <h4>Jeffery Santana</h4>
-            <p>iOS Developer Engineer</p>
-            <p>iOS Development Lambda School</p>
-            <button class="gitbtn"><a href="https://github.com/Santana-Says">GITHUB</a></button>
-        </div>
-        <div class="teamcards">
-            <img src="/imgs/jon.jpeg" alt="jon profile">
-            <h4>Jonathan Scott</h4>
-            <p>Front End I</p>
-            <p>Web Development Lambda School</p>
-            <button class="gitbtn"><a href="https://github.com/jondscott21">GITHUB</a></button>
-        </div>     
-        <div class="teamcards">
-            <img src="/imgs/leana.jpeg" alt="Leana">
-            <h4>Leana Neparidze</h4>
-            <p>Front End II</p>
-            <p>Web Development Lambda School</p>
-            <button class="gitbtn"><a href="https://github.com/leananepari">GITHUB</a></button>
-        </div>
-        <div class="teamcards">
-            <img src="/imgs/Areum.jpeg" alt="Areum">
-            <h4>Areum Jo</h4>
-            <p>Front End III</p>
-            <p>Web Development Lambda School</p>
-            <button class="gitbtn"><a href="https://github.com/areumjo">GITHUB</a></button>
-        </div>    
-        <div class="teamcards">
-            <img src="/imgs/blake.jpeg" alt="blake">
-            <h4>Blake Goms</h4>
-            <p>Front End Arch</p>
-            <p>Web Development Lambda School</p>
-            <button class="gitbtn"><a href="https://github.com/orgs/bookr-buildweek/people/Blake-Goms">GITHUB</a></button>
-        </div>    
-        <div class="teamcards">
-            <img src="/imgs/nabeelah.jpeg" alt="Nabeelah">
-            <h4>Nabeelah Yousuph</h4>
-            <p>Web Backend</p>
-            <p>Web Development Lambda School</p>
-            <button class="gitbtn"><a href="https://github.com/NabeelahY">GITHUB</a></button>
-        </div>
-    </div>                   
-    </section>
-</div><!--About Wrapper-->
-<footer>   
-    <nav>
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-youtube"></a>
-        <a href="#" class="fa fa-instagram"></a> 
-    </nav>
-    <p>Copyright 2019</p>
-</footer>
-</div>
+        <header>
+            <div class="navbar">
+                <div class="logo">
+                    <a href="index.html"><img src="imgs/BOOKR LOGO.png" alt="company logo"></a>
+                </div><!--Logo-->
+                <nav>
+                    <a href="about.html">ABOUT</a>
+                    <a href="https://bookrlambda.netlify.com/" id="signIn">SIGN IN</a>
+                </nav>
+            </div><!--Nav Bar-->
+        </header>
+        <div class="about-wrapper">
+            <section class="top-content">
+                <div class="topimg">
+                    <img src="imgs/topimg.jpg" alt="book shelf">
+                </div>
+                <div class="toptxt">
+                    <h1>Who are We?</h1>
+                    <p>Bookr is your source for all things Textbook. 
+                    Picture the AirBNB of textbooks, a social platform for peer-reviewed textbooks.As a user I can log in and see a list of textbooks. Each book will have a 5 star rating I can browse from. 
+                    As a user I can review each book.
+                    </p>
+                </div><!--Top text-->
+                <div class="signupbtn">
+                    <button class="aboutbtn"><a href="https://bookrlambda.netlify.com/">SIGN UP!</a></button>
+                </div>
+            </section><!--Top Content-->
+            <section class="middle-content">
+                <div class="middle-box">
+                    <img src="imgs/service.jpg" alt="desk with school supplies">
+                    <h3>Service</h3>
+                    <p>Teachers surveyed reported that they would be more likely to try a textbook if it was recommended by a peer. BOOKR is a platform for teachers to share both positive and negative feedback on their teaching materials. Guiding them to the correct purchase for their class.
+                    </p>
+                </div>
+                <div class="middle-box">
+                    <img src="imgs/review.jpg" alt="open book">
+                    <h3>Review</h3>
+                    <p>Users have the power to review any textbook in our database. Teachers can leave detail realworld experience reviews, based on a wide range of criteria. We also make use of a simple 5 star rating for when you need to quickly sort based on the highest ratings.</p>
+                </div>
+                <div class="middle-box">
+                    <img src="/imgs/social.jpg" alt="money">
+                    <h3>Social</h3>
+                    <p>Bookr is more then a review app, it's a soical media platform for those who have an interest in providing the very best textbooks for the youth of the world. With user feedback and interaction together we can prevent poorly crafted or inefficient books from being purchase by your school.  </p>
+                </div>
+            </section>
+            <section class="team">
+                <div class="teamtext">
+                    <h2>The team behind the scenes</h2>
+                    <p>Bookr was a collbrative project built by Lambda School students during the build week of July 2019.</p>
+                </div>
+                <div class="bios">
+                    <div class="teamcards">
+                        <img src="/imgs/daniel.jpeg" alt="daniel">
+                        <h4>Daniel Jones</h4>
+                        <p>Web UI</p>
+                        <p>Web Development Lambda School</p>            
+                        <button class="gitbtn"><a href="https://github.com/djones36">GITHUB</a></button>
+                    </div>
+                    <div class="teamcards">
+                        <img src="/imgs/suffyan.jpeg" alt="Suffyan">
+                        <h4>Suffyan Tariq</h4>
+                        <p>Web UI</p>
+                        <p>Web Development Lambda School</p>
+                        <button class="gitbtn"><a href="https://github.com/Suffyan-T">GITHUB</a></button>
+                    </div>
+                    <div class="teamcards">
+                        <img src="/imgs/Leslee.jpeg" alt="Leslee">
+                        <h4>Leslee Wood</h4>
+                        <p>UX Designer</p>
+                        <p>UX Designer Lambda School</p>
+                        <button class="gitbtn"><a href="https://github.com/LVWood">GITHUB</a></button>
+                    </div>  
+                    <div class="teamcards">
+                        <img src="/imgs/taylor.jpeg" alt="taylor profile">
+                        <h4>Taylor Fahey-Lyles</h4>
+                        <p>iOS Developer</p>
+                        <p>iOS Development Lambda School</p>
+                        <button class="gitbtn"><a href="https://github.com/OaklandHawk">GITHUB</a></buttoN>
+                    </div>      
+                    <div class="teamcards">
+                        <img src="/imgs/jeff.jpeg" alt="jeff profile">
+                        <h4>Jeffery Santana</h4>
+                        <p>iOS Developer Engineer</p>
+                        <p>iOS Development Lambda School</p>
+                        <button class="gitbtn"><a href="https://github.com/Santana-Says">GITHUB</a></button>
+                    </div>
+                    <div class="teamcards">
+                        <img src="/imgs/jon.jpeg" alt="jon profile">
+                        <h4>Jonathan Scott</h4>
+                        <p>Front End I</p>
+                        <p>Web Development Lambda School</p>
+                        <button class="gitbtn"><a href="https://github.com/jondscott21">GITHUB</a></button>
+                    </div>     
+                    <div class="teamcards">
+                        <img src="/imgs/leana.jpeg" alt="Leana">
+                        <h4>Leana Neparidze</h4>
+                        <p>Front End II</p>
+                        <p>Web Development Lambda School</p>
+                        <button class="gitbtn"><a href="https://github.com/leananepari">GITHUB</a></button>
+                    </div>
+                    <div class="teamcards">
+                        <img src="/imgs/Areum.jpeg" alt="Areum">
+                        <h4>Areum Jo</h4>
+                        <p>Front End III</p>
+                        <p>Web Development Lambda School</p>
+                        <button class="gitbtn"><a href="https://github.com/areumjo">GITHUB</a></button>
+                    </div>    
+                    <div class="teamcards">
+                        <img src="/imgs/blake.jpeg" alt="blake">
+                        <h4>Blake Goms</h4>
+                        <p>Front End Arch</p>
+                        <p>Web Development Lambda School</p>
+                        <button class="gitbtn"><a href="https://github.com/orgs/bookr-buildweek/people/Blake-Goms">GITHUB</a></button>
+                    </div>    
+                    <div class="teamcards">
+                        <img src="/imgs/nabeelah.jpeg" alt="Nabeelah">
+                        <h4>Nabeelah Yousuph</h4>
+                        <p>Web Backend</p>
+                        <p>Web Development Lambda School</p>
+                        <button class="gitbtn"><a href="https://github.com/NabeelahY">GITHUB</a></button>
+                    </div><!--Team Cards-->
+                </div><!--Bios-->                  
+            </section><!--Team-->
+        </div><!--About Wrapper-->
+        <footer>   
+        <nav>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-youtube"></a>
+            <a href="#" class="fa fa-instagram"></a> 
+        </nav>
+        <p>Copyright 2019</p>
+        </footer>
+    </div>
 </body>
