fixed background image on mobile sizing

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="videoWrapper">
                     <video autoplay muted loop id="bgVideo">
                         <source src="video/Untitled Project 1.mov" type="video/mp4">
-                        Your browser does not support HTML5 video.
+                        Your browser does not support HTML5 video.<!--Text to be displayed if the browser does not support html5-->
                     </video>  
             </div><!--Video Wrapper-->
         </div><!--Site Wrapper-->
